Tree and side/alignment changing.